update after helm lint cmd

--- a/api/templates/deployment.yaml
+++ b/api/templates/deployment.yaml
@@ -16,8 +16,9 @@ spec:
         app: {{ $.Release.Name }}
     spec:
       containers:
-        - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+        - name: {{ $.Release.Name }}
+          image: "{{ .containers.image.repository }}:{{ .containers.image.tag | default "latest" }}"
           imagePullPolicy: Always
           ports:
               containerPort: {{ .containers.ports }}
+{{- end }}
